# AMRDemo

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
apps/bridge/: .env.example  pyproject.toml
apps/bridge/prisma/: schema.prisma
apps/bridge/prisma/migrations/20260605081200_init/: migration.sql
apps/bridge/src/: main.py
apps/bridge/src/api/: maps.py
apps/bridge/src/services/: map_service.py  map_utils.py
apps/bridge/tests/: test_health.py  test_map_service.py  test_map_utils.py  test_maps_api.py
apps/web/: package.json  vitest.config.ts
apps/web/app/: layout.tsx  page.tsx
apps/web/app/map/new/: page.tsx
apps/web/app/maps/: page.tsx
apps/web/components/map/: ActiveMapCard.tsx  MapCanvas.tsx  MapCard.tsx  MapList.tsx  MappingStatus.tsx  SaveMapPanel.tsx  Teleop.tsx
apps/web/components/ros/: OdomReadout.tsx  ROSProvider.tsx  RosStatus.tsx
apps/web/lib/: maps-api.ts  occupancy-grid.ts  ros-client.ts  teleop.ts
apps/web/tests/: maps-api.test.ts  occupancy-grid.test.ts  ros-client.test.ts  teleop.test.ts
configs/: cyclonedds.xml
docs/: setup-guide.md
docs/superpowers/plans/: 2026-06-04-milestone-1a-infrastructure-setup.md  2026-06-05-milestone-1b-slam-map.md
docs/superpowers/specs/: 2026-06-04-amr-detail-design.md  2026-06-05-milestone-1b-slam-map-design.md
ros2_ws/src/amrdetail_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/amrdetail_bringup/launch/: sim.launch.py
ros2_ws/src/amrdetail_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/amrdetail_msgs/msg/: Mission.msg  MissionStatus.msg
ros2_ws/src/amrdetail_safety/: CMakeLists.txt  package.xml
ros2_ws/src/amrdetail_safety/config/: twist_mux.yaml
ros2_ws/src/amrdetail_safety/launch/: safety.launch.py
ros2_ws/src/amrdetail_slam/: CMakeLists.txt  package.xml
ros2_ws/src/amrdetail_slam/config/: slam_toolbox.yaml
ros2_ws/src/amrdetail_slam/launch/: slam.launch.py
scripts/: amrdetail-launch
