<?xml version="1.0"?>
<package format="3">
  <name>amrdetail_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for AMRDetail simulation and real robot bringup</description>
  <maintainer email="dean@robos.one">Dean</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
