<?xml version="1.0"?>
<package format="3">
  <name>amrdetail_safety</name>
  <version>0.1.0</version>
  <description>cmd_vel priority mux (twist_mux) and safety nodes for AMRDetail</description>
  <maintainer email="dean@robos.one">Dean</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>twist_mux</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
