<?xml version="1.0"?>
<package format="3">
  <name>amrdetail_slam</name>
  <version>0.1.0</version>
  <description>slam_toolbox online_async configuration and launch for AMRDetail</description>
  <maintainer email="dean@robos.one">Dean</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
